# dwt-ci-dev

./: .envrc.example  .gitignore  README.md  appspec.yml  terraform.mk  workflow.mk
.github/: pull_request_template.md
aws-policies/: tf_prod_iam_policy.json  tf_staging_iam_policy.json  tf_staging_iam_role.json
ci/: Dockerfile-dagit  Dockerfile-pipelines  dagster.yaml  docker-compose.yaml  workspace.yaml
dagster/: Makefile  catalog-info.yaml  docker-compose.yaml  pyproject.toml  workspace.yaml
dagster/docker/: Dockerfile  dagster.env  dagster.yaml  workspace.yaml
dagster/src/: definitions.py
dagster/src/assets/: cereals_assets.py
dagster/src/jobs/: cereals.py  say_hello.py
dagster/src/ops/: cereals.py
dagster/src/schedules/: my_hourly_schedule.py
dagster/src/sensors/: my_sensor.py
dagster/tests/test_graphs/: test_cereals.py  test_say_hello.py
dagster/tests/test_ops/: test_cereals.py  test_hello.py
scripts/: application_start.sh  before_install.sh
terraform/: README.md
terraform/docs/: aws-template.drawio
terraform/modules/codedeploy/: main.tf  outputs.tf  variables.tf
terraform/modules/codepipeline/: README.md  main.tf  outputs.tf  variables.tf
terraform/modules/ec2/: README.md  main.tf  outputs.tf  variables.tf
terraform/modules/iam/: README.md  ec2_role.tf  (+2 more)
terraform/production/: backend.tf  backend.tf.template  iam.tf  locals.tf  providers.tf  rds.tf  terraform.tfvars.sample  vpc.tf
terraform/staging/: backend.tf  codepipeline.tf  ec2.tf  providers.tf.template  s3.tf  security_groups.tf  terraform.tfvars.sample  variables.tf
(+17 files in other folders)
