[tool.poetry]
name = "de-workflow-template"
version = "0.1.0"
description = "Workflow template for DE projects"
authors = []

[tool.poetry.dependencies]
python = "~3.10.0"
pre-commit = "~2.17.0"
pytest = "~6.2.5"
pytest-cov = "4.0.0"
dagster = "^1.7.4"
dagit = "^1.7.4"
dagster-postgres = "^0.23.4"

[tool.poetry.dev-dependencies]

[tool.black]
preview = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
